# Opt_SantaTravelling

./: .gitignore  CMakeLists.txt  LocalSolutionControl.cpp  LocalSolutionControl.h  SolutionControl.cpp  SolutionControl.h
Approximation/: Approximation.cpp  Approximation.h  main.cpp
Common/: SolutionControl.h  Support.cpp  Support.h
Improvement/: Improvement.cpp  Improvement.h  main.cpp
NearestPoints/: main.cpp
Santa2/: Solution.cpp  Solution.h  Support.cpp  Support.h  main.cpp
Support/: plot.py  retsp.py
